--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "fast-csv": "^4.3.6",
     "http-status-code": "^2.1.0",
     "multer": "^1.4.5-lts.1"
+  },
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only ./src/app/server.ts"
   }
 }
