--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "fast-csv": "^4.3.6",
     "http-status-code": "^2.1.0",
