--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^4.3.6",
     "@types/express": "^4.17.17",
+    "@types/mocha": "^10.0.1",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.5.9",
+    "@types/supertest": "^2.0.12",
+    "chai": "^4.3.8",
+    "mocha": "^10.2.0",
+    "supertest": "^6.3.3",
+    "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   },
@@ -19,6 +26,7 @@
     "multer": "^1.4.5-lts.1"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only ./src/app/server.ts"
+    "dev": "ts-node-dev --respawn --transpile-only ./src/app/server.ts",
+    "test": "mocha -r ts-node/register 'tests/*.test.ts'"
   }
 }
