created test file to search the CSV data for matches to the query parameter, also update the endpoints

--- a/package.json
+++ b/package.json
@@ -27,6 +27,6 @@
   },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only ./src/app/server.ts",
-    "test": "mocha -r ts-node/register 'tests/*.test.ts'"
+    "test": "mocha -r ts-node/register 'tests/uploadFile.test.ts' 'tests/searchData.test.ts'"
   }
 }
